tests/ui/fn/fn-trait-use-named-params-issue-140169.stderr
error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:2:25
   |
LL | fn x(_: impl Fn(u8, vvvv: u8)) {}
   |                         ^ expected one of 7 possible tokens

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:3:21
   |
LL | fn y(_: impl Fn(aaaa: u8, u8)) {}
   |                     ^ expected one of 7 possible tokens

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/fn-trait-use-named-params-issue-140169.rs:4:21
   |
LL | fn z(_: impl Fn(aaaa: u8, vvvv: u8)) {}
   |                     ^ expected one of 7 possible tokens

error: aborting due to 3 previous errors

